--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My awesome page</title>
   </head>
   <body>
+    <h1>I'm a header!</h1>
 Hello there, awesome person!
   </body>
 </html>
