--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
     <h1>I'm a header!</h1>
 Hello there, awesome person!
     <img src="https://avatars2.githubusercontent.com/u/53395737?s=40&v=4">
+    <ul>
+      <li>Github</li>
+    </ul>
   </body>
 </html>
