--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 Hello there, awesome person!
     <img src="https://avatars2.githubusercontent.com/u/53395737?s=40&v=4">
     <ul>
-      <li>Github</li>
+      <li><a href="https://github.com">This is a link to GitHub!</a></li>
     </ul>
   </body>
 </html>
